--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                <div 
                   class="page-column"
                   id="visualisation" 
-                  data-sgvizler-endpoint="http://localhost:3030/ds/query"
+                  data-sgvizler-endpoint="http://ld.eliendrae.net:3030/ds/query"
                   data-sgvizler-query=''
                   data-sgvizler-chart="google.visualization.Map" 
                   data-sgvizler-loglevel="2"
