--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <script type="text/javascript" src="https://www.google.com/jsapi"></script>
       <script type="text/javascript" src="js/bootstrap.min.js"></script>
       <script type="text/javascript" src="js/extern.js"></script>
+      <script type="text/javascript" src="js/sgvizler.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
       <script type="text/javascript">
          sgvizler.prefix('wd', 'http://sws.ifi.uio.no/d2rq/resource/');
