Add license and README

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--
+The MIT License (MIT)
+
+Copyright (c) 2014 Balázs Pete
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+-->
+
 <!DOCTYPE HTML>
 <html>
    <head>
@@ -6,7 +18,7 @@
       <meta charset="UTF-8">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/custom.css" rel="stylesheet">
-     
+
    </head>
    <body>
        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -40,14 +52,14 @@
                   <span>Loading data and generating interface...</span>
             </div>
             <div class="col-md-9 main">
-               <div 
+               <div
                   class="page-column"
-                  id="visualisation" 
+                  id="visualisation"
                   data-sgvizler-endpoint="http://ld.eliendrae.net:3030/ds/query"
                   data-sgvizler-query=''
-                  data-sgvizler-chart="google.visualization.Map" 
+                  data-sgvizler-chart="google.visualization.Map"
                   data-sgvizler-loglevel="2"
-                  style="height:100%" 
+                  style="height:100%"
                   data-sgvizler-chart-options="showTip=true|useMapTypeControl=true|mapType=terrain|enableScrollWheel=true"></div>
             </div>
          </div>
@@ -100,9 +112,9 @@
             {{else}}
             <button class="btn btn-link clear-link">clear</button>
             {{/unless}}
-            {{#unless single}}      
+            {{#unless single}}
             <div class="tag-cloud-area" data-query-id="{{id}}">
-               {{#each options}}            
+               {{#each options}}
                   {{tagCloudTag .}}
                {{/each}}
             </div>
@@ -132,7 +144,7 @@
          sgvizler.prefix('lgdo', 'http://linkedgeodata.org/ontology/');
          sgvizler.prefix('geo', 'http://www.w3.org/2003/01/geo/wgs84_pos#');
 
-         $(document).ready(function() { 
+         $(document).ready(function() {
             setupHandlebars();
             $(".page-column").css('height', $(window).height()-50);
             updateInterface();
